	  output in the wrong order; this resulted in yellow
	  being printed instead of black on Stylus Photo
	  printers.
	- The pdftops filter did not have the Japanese and
	  Chinese text support compiled into it.
	- The IPP and AppSocket backends did not clear the
	  "waiting for print job to complete" status message,
	  which caused some confusion... :)


CHANGES IN CUPS V1.1.9-1

	- The configure script did not substitute the
	  correct user and group names.
	- The configure script did not use the full path
	  to the install-sh script when it was used.
	- The pstoraster filter did not correctly support
	  DuplexTumble mode for printers that used flip
	  duplexing.
	- The cups.list.in file was missing from the
	  distribution.
	- The New DeskJet series driver did not use the
	  correct OrderDependency for the Duplex option.
	- Use read() instead of fread() to read piped
	  print files in lpr/lp.  This avoids a bug in the
	  HP-UX 10.20 fread() function.


CHANGES IN CUPS V1.1.9

	- Revamped the configure script to use a modular
	  approach for the various tests.
	- Added --with-openssl-* options to properly reference
	  the OpenSSL libraries in DSOs.
	- Added --with-cups-user and --with-cups-group
	  options to specify the default user and group for
	  CUPS.
	- Added AIX shared library support.
	- Added AIX device discovery for the serial and
	  parallel ports.
	- Now use install program or script to install
	  directories, files, and symlinks.
	- Updated pstops filter to use strict handling of EPS
	  files embedded in a PostScript document.  The %%EOF
	  handling in 1.1.8 caused some dvips files not to
	  print.
	- Fixed yet another memory allocation bug in pstoraster
	  that would cause it to crash.  This fix also ensures
	  that all memory allocations are done on (at least) a
	  64-bit boundary.
	- Fixed Digest authentication - httpGetSubField() didn't
	  skip the Digest keyword.
	- The scheduler did not properly handle Digest